(refact) use junit-sql & querydsl-crud